idf_component_register(
    SRCS
        "src/c3db_cached_db_file.cpp"
        "src/c3db_cached_db.cpp"
        "src/c3db_config.cpp"
        "src/c3db_data_db.cpp"
        "src/c3db_data_file.cpp"
        "src/c3db_db.cpp"
        "src/c3db_db_file.cpp"
        "src/c3db_file.cpp"
        "src/c3db_index.cpp"
        "src/c3db_index_bucket.cpp"
        "src/c3db_index_ref.cpp"
        "src/c3db_utils.cpp"
    INCLUDE_DIRS "include"
)
